--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 DeepSurv/
 pycox-deepsurv/
+deepsurvTorch/
 archive/
 __pycache__/
+weight_checkpoint_*
 data/2024-08-08/
 data/2024-08-15/
 data/082924/
