--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,20 +5,28 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "precision-seq-survival"
 version = "0.1.0"
-description = "Survival simulation and modeling pipeline (Cox/SSVM/RSF/DeepSurv)"
+description = "Survival prediction with high-dimensional augmented microRNA sequencing (miRNA-seq) data"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = {text = "MIT"}
+
 dependencies = [
-  "numpy", "pandas", "matplotlib",
-  "scikit-learn", "scikit-survival",
-  "optuna", "torch", "torchtuples", "pycox",
-  "sklearn-pandas"
+  "numpy>=1.24", 
+  "pandas>=1.5", 
+  "scikit-learn>=1.2.2",
+  "scikit-survival>=0.21.0",
+  "optuna>=4.4",
+  "torch>=2.0",
+  "torchtuples",
+  "sklearn-pandas",
+  "matplotlib",
+  "scipy",
+  "numba"
 ]
 
 [tool.setuptools.packages.find]
 where = ["pss"]
 
 [project.scripts]
-pss-deepsurv = "precision_seq_survival.main:main"        # expects main(config_path)
-pss-sksurv   = "precision_seq_survival.main_sksurv:main" # argparse entrypoint
+pss-deepsurv = "scripts.main:main"        
+pss-sksurv   = "scripts.main-sksurv:main"
